syntax = "proto3";

package main;

message Chat2Message {
    uint64 timestamp = 1;
    string nick = 2;
    bytes payload = 3;
}