syntax = "proto3";

package protocol;

message WakuMessage {
    optional bytes payload = 1;
    optional fixed32 contentTopic = 2;
    optional uint32 version = 3;
}